--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="index.css">
+	<link rel="stylesheet" herf="index.css">
 </head>
 
 <body>
