--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" herf="index.css">
+	<link rel="stylesheet" href="index.css">
+	<link rel="manifest" href="manifest.json">
+	<script src="index.js"></script>
 </head>
 
 <body>
 	<div class="money">
-	<p>traditional</p>
+	<p id="money">traditional</p>
 	</div>
-	<button type="button" name="ボタンだよ">
+	<button type="button" name="ボタンだよ">ボタンだよ
 	</button>
-	<script defer type="text/javascript" src="index.js"></script>
+	<script src="index.js"></script>
 </body>
 </html>
