--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
 
-    <p>タスク管理アプリ</p>
+    <p>テスト</p>
     <script>
         if ('serviceWorker' in navigator) {
         window.addEventListener('load', function() {
