--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script>
         if ('serviceWorker' in navigator) {
         window.addEventListener('load', function() {
-          navigator.serviceWorker.register('./main.js').then(function(registration) {
+          navigator.serviceWorker.register('./sw.js').then(function(registration) {
           }, function(err) {
             console.log('読み込み失敗');
           });
